# nine_frogs

./: .gitignore  CITATIONS.md  DECISIONS.md  README.md  ROADMAP.md  VISION.md  start.ps1
.claude/: settings.local.json
ninefrogs/: .env.example  config.py  embeddings.py  log.py  main.py  pyproject.toml  start.ps1
ninefrogs/alembic/: env.py
ninefrogs/alembic/versions/: a1b2c3d4e5f6_challenge_progress_notes.py  a1b2c3d4e5f6_syllabus_section_drill_level.py  b1c2d3e4f5a6_nine_frog_labs.py  c1d2e3f4a5b6_practice_mode.py  d1e2f3a4b5c6_neetcode_subjects.py  e1f2a3b4c5d6_drop_campaigns_subject.py  e40256eed259_document_collections.py  f1a2b3c4d5e6_campaign_topic_config.py  f77bd058b658_initial_schema.py
ninefrogs/anki/: client.py
ninefrogs/db/: engine.py  models.py
ninefrogs/flashcards/: generator.py
ninefrogs/knowledge/: crawler.py  ingest.py  preload.py  repo.py  retriever.py  wikipedia.py
ninefrogs/lab/: __init__.py  importer.py  neetcode150.yaml  runner.py  sm2.py  subjects.py  tasks.py
ninefrogs/llm/: client.py  schemas.py
ninefrogs/research/: events.py  pipeline.py  prompts.py  repo_syllabus.py
ninefrogs/web/: app.py  dependencies.py  templating.py
ninefrogs/web/routes/: anki.py  cards.py  collections.py  drills.py  index.py  lab.py  research.py  syllabus.py  wiki.py
ninefrogs/web/static/css/: theme.css
ninefrogs/web/static/js/: shortcuts.js
ninefrogs/web/templates/: anki_export.html  base.html  card_review.html  collection_detail.html  collections.html  drills_picker.html  error.html  index.html  research_progress.html  syllabus_review.html
(+10 files in other folders)
